CR-2003-04-08-0  Enhancem:  clean rule for drmaa objs
                 Changed:   libs/japi/Makefile

AH-2003-04-07-0  Enhancem:  - implemented drmaa_job_ps()
                            - fix problems with drmaa_wait() operating on 
                              individual jobids rather than on 
                              DRMAA_JOB_IDS_SESSION_ANY
                            - event client thread reconnects to qmaster 
                              during session when qmaster is down
                            - ensure event client does not exit(1) DRMAA
                              library
                            - investigate sgeE_JOB_LIST event to update
                              library session data
                            - ensure low level GDI errors/warnings are not
                              printed but reported in DRMAA diagnosis buffer
                 Review:    JG

EB-2003-04-06-0  Testsuite: Added new testsuite test for issue 509
                 Issue:     520
                 Review:    CR

EB-2003-04-04-0  Bugfix:    jobs suspended due to calendar were handled as 
                            running jobs within scheduler 
                            (see EB-2003-03-27-0)
                 Review:    AH
                 Changed:   sge_schedd 

CR-2003-04-03-0  Bugfix:    commd ignored first message for commlib client
                            in case of priority tags messages (used for
                            qmaster <-> execd communication). The first 
                            message was ignored when more than one message
                            with the same priority tag was ready to send.
                 Review:    AH
                 Changed:   commd

EB-2003-04-03-1  Testsuite: Added new testsuite test for issue 511
                 Bugtraq:   518
                 Review:    CR

RC-2003-04-03-0  Enhancem:  Start checking at argv[1] instead of
                            argv[0] for sge parameters.